--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,12 +29,16 @@
     </nav>
     <% if notice.present? %>
       <div class="notice">
-        <p> <%= notice %> </p>
+        <p>
+          <%= notice %>
+        </p>
       </div>
     <% end %>
     <% if alert.present? %>
       <div class="alert">
-        <p> <%= alert %> </p>
+        <p>
+          <%= alert %>
+        </p>
       </div>
     <% end %>
     <main class="main">
