--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,9 @@
 <li>
-  Name: <%= user.name %>
+  Name:
+  <%= user.name %>
   <span class="profile-link">
-    
-    <%= link_to 'See Profile',  user_path(user), class: 'profile-link' %>
+
+    <%= link_to 'See Profile', user_path(user), class: 'profile-link' %>
     <% if !user.friend?(current_user) and !current_user.pending_friends.include?(user) and !user.pending_friends.include?(current_user) and user != current_user %>
       <%= link_to 'Add friend', user_friendships_path(user), method: :post, class: 'profile-link' %>
     <% end %>
