--- a/app/views/friendships/index.html.erb
+++ b/app/views/friendships/index.html.erb
@@ -1,8 +1,11 @@
 <article class="friends">
-  <h3>Friends List</h3>
+  <h3>Friends</h3>
   <ul class="friendships">
+    <h4>Friend Requests</h4>
     <%= render @friend_requests %>
+    <h4>Pending Friend Requests</h4>
     <%= render @pending_friends %>
+    <h4>Friends List</h4>
     <%= render @friends%>
   </ul>
 
