--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,8 @@
 <section class="user-section">
   <h2><%= "Name: #{@user.name}" %></h2>
+
   <article class="timeline">
+    <%= render './friendships/friends' %>
     <h3>Recent posts:</h3>
     <ul class="posts">
       <%= render @posts %>
