--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -7,7 +7,7 @@
     <% if !user.friend?(current_user) and !current_user.pending_friends.include?(user) and !user.pending_friends.include?(current_user) and user != current_user %>
       <%= link_to 'Add friend', user_friendships_path(user), method: :post, class: 'profile-link' %>
     <% end %>
-    <% if current_user.friend_requests.include?(user) %>
+    <% if current_user.friend_requests.include?(user) and !current_user.friends.include?(user) and !current_user.pending_friends.include?(user) %>
       <%= link_to 'Decline', friendship_path(user), method: :delete %>
       <%= link_to 'Accept', user_accept_friendships_path(user) %>
     <% end %>
