--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,700,900&display=swap");
-
 $primary-color-dark: #689f38;
 $primary-color: #8bc34a;
 $primary-color-light: #dcedc8;
@@ -74,8 +73,8 @@ a {
   padding: 16px;
 }
 
-.notice,
-.alert {
+.alert,
+.notice {
   margin-bottom: 8px;
   width: 100%;
   height: 30px;
@@ -98,8 +97,8 @@ a {
   color: red;
 }
 
-.new_post,
-.new_comment {
+.new_comment,
+.new_post {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -222,7 +221,7 @@ form {
     float: left;
 
     .post-author {
-      margin: 0 0 8px 0;
+      margin: 0 0 8px;
       color: $primary-color-dark;
       text-transform: capitalize;
     }
@@ -290,8 +289,9 @@ form {
     padding: 0 0 8px;
     color: $primary-color-dark;
   }
-  .profile-button{
-    padding:0.5rem;
+
+  .profile-button {
+    padding: 0.5rem;
   }
 }
 
@@ -309,8 +309,6 @@ form {
     h3 {
       width: 100%;
     }
-
-
     justify-content: start;
   }
 }
@@ -325,7 +323,6 @@ form {
     color: #f00;
   }
 }
-
 @media only screen and (min-width: 480px) {
   form {
     width: 60%;
@@ -333,12 +330,11 @@ form {
 
   .new_post,
   .timeline,
-  .users-section,
-  .user-section {
+  .user-section,
+  .users-section {
     width: 70%;
   }
 }
-
 @media (min-width: 780px) {
   form {
     width: 40%;
@@ -346,8 +342,8 @@ form {
 
   .new_post,
   .timeline,
-  .users-section,
-  .user-section {
+  .user-section,
+  .users-section {
     width: 50%;
   }
 }
